--- a/style.scss
+++ b/style.scss
@@ -224,7 +224,7 @@ nav {
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
-    text-decoration: underline;
+    /*text-decoration: underline;*/
     font-size: 30px;
 
     @include mobile {
