--- a/style.scss
+++ b/style.scss
@@ -23,8 +23,8 @@ html {
 }
 
 body {
-	/*background: $white;*/
-  background: #FDF9DE;
+	background: $white;
+  /*background: #FDF9DE;*/
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
@@ -263,6 +263,7 @@ nav {
     padding: 0.1em 1em;
     color: $gray;
     font-size: 22px;
+    font-family: geo;
     font-style: italic;
   }
 
