--- a/style.scss
+++ b/style.scss
@@ -153,7 +153,7 @@ img {
 //
 
 .wrapper-masthead {
-  background: $lightGray
+  /*background: $lightGray*/
   margin-bottom: 50px;
 }
 
@@ -197,7 +197,7 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: $helveticaNeue;
+  font-family: geo;
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
