--- a/style.scss
+++ b/style.scss
@@ -41,6 +41,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: geo;
   color: $darkerGray;
   font-weight: bold;
+  color: #336699;
 
   line-height: 1.7;
   margin: 1em 0 15px;
@@ -73,6 +74,7 @@ h4 {
 
 p {
   margin: 13px 0;
+  font-family: geo;
 }
 
 a {
