--- a/style.scss
+++ b/style.scss
@@ -288,9 +288,9 @@ nav {
   }
 
   .read-more {
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     font-size: 15px;
-    font-family: charter;
+    font-family: adreena;
   }
 }
 
