--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,19 +26,19 @@
         <header class="masthead clearfix">
           <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
-          <!-- <div class="site-info">
+         <!--  <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
-          </div>
-          -->
+          </div> -->
+
           <div class="site-info">
             <nav>
-              <a href="{{ site.baseurl }}/">Home</a>
-              <a href="{{ site.baseurl }}/about">About</a>
+              <!-- <a href="{{ site.baseurl }}/">Home</a> -->
+              <a href="{{ site.baseurl }}/" class="title" style="font-family: adreena;">My Rendezvous with Life</a>
             </nav>
           </div>
           <nav>
-            <a href="{{ site.baseurl }}/" class="title">My Rendezvous with Life</a>
+              <a href="{{ site.baseurl }}/about" class="site-description">About</a>
           </nav>
         </header>
       </div>
