--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+          <!-- <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a> -->
 
          <!--  <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
@@ -34,11 +34,12 @@
           <div class="site-info">
             <nav>
               <!-- <a href="{{ site.baseurl }}/">Home</a> -->
-              <a href="{{ site.baseurl }}/" class="title" style="font-family: adreena;">My Rendezvous with Life</a>
+              <a href="{{ site.baseurl }}/" class="title"><b>Curious</b>Guy</b></a>
             </nav>
           </div>
           <nav>
               <a href="{{ site.baseurl }}/about" class="site-description">About</a>
+              <a href="www.github.com/shivam-tripathi" class="site-description">Github</a>
           </nav>
         </header>
       </div>
