--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -3,21 +3,25 @@
 // VARIABLES
 //
 
-// Colors
-$blue: #4183C4; 
-
-// Grays
+$blue: #4183C4;
 $black: #000;
 $darkerGray: #222;
 $darkGray: #333;
 $gray: #666;
 $lightGray: #eee;
 $white: #fff;
+$oceanGreen: #00C37F;
+$darkBlue: #14141C;
+$crimson: #E25044;
+$tumblrBlue: #34455F;
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
+@include font-face(charter, fonts/Charter.ttf);
+@include font-face(kievit, fonts/Kievit.ttf);
+@include font-face(geo, fonts/GeosansLight.ttf);
 
 // Mobile breakpoints
 @mixin mobile {
