Fix color and nav font-size

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,11 +34,12 @@
           <div class="site-info">
             <nav>
               <!-- <a href="{{ site.baseurl }}/">Home</a> -->
-              <a href="{{ site.baseurl }}/" class="title"><b>Curious</b>Guy</b></a>
+              <a href="{{ site.baseurl }}/" class="title">The<b>Curious</b>Guy</b></a>
             </nav>
           </div>
           <nav>
               <a href="{{ site.baseurl }}/about" class="site-description">About</a>
+              &nbsp;&nbsp;&nbsp;
               <a href="www.github.com/shivam-tripathi" class="site-description">Github</a>
           </nav>
         </header>
