--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: kievit;
   color: $darkerGray;
   font-weight: bold;
-  color: #00c37f;
+  color: tumblrBlue;
 
   line-height: 1.7;
   margin: 1em 0 15px;
@@ -195,7 +195,7 @@ img {
 .site-description {
   margin: -5px 0 0 0;
   color: $gray;
-  font-size: 16px;
+  font-size: 24px;
 
   @include mobile {
     margin: 3px 0;
