--- a/_scss/_highlights.scss
+++ b/_scss/_highlights.scss
@@ -3,6 +3,11 @@
 /* SYNTAX HIGHLIGHTING */
 /***********************/
 
+@font-face{
+  font-family: monaco;
+  src: url("fonts/Monaco.ttf");
+}
+
 .highlight {
   background-color: $darkerGray;
   padding: 5px 10px;
@@ -16,8 +21,8 @@
 }
 
 code {
-  font-family: 'Courier', monospace;
-  font-size: 20px;
+  font-family: monaco;
+  font-size: 14px;
   color: #999
 }
 
