--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
           <nav>
               <a href="{{ site.baseurl }}/about" class="site-description">About</a>
               &nbsp;&nbsp;&nbsp;
-              <a href="www.github.com/shivam-tripathi" class="site-description">Github</a>
+              <a href="https://www.github.com/shivam-tripathi" class="site-description">Github</a>
           </nav>
         </header>
       </div>
